# python-training

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
course-management/: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml
course-management/src/config/: urls.py
course-management/src/config/settings/: base.py
course-management/src/courses/: views.py
course-management/src/courses/templates/courses/: error.html  index.html
course-management/src/courses/tests/: test_models.py  test_views.py
course-management/src/polls/: views.py
course-management/src/polls/api/: serializers.py
course-management/src/polls/management/commands/: init_polls.py  polls.json
course-management/src/polls/migrations/: 0001_initial.py
course-management/src/polls/templates/admin/: base_site.html
course-management/src/polls/templates/polls/: detail.html  index.html
course-management/src/students/: models.py
course-management/src/students/migrations/: 0002_alter_student_user.py
course-management/src/students/tests/: test_models.py
course-management/src/users/: admin.py  models.py  views.py
course-management/src/users/migrations/: 0001_initial.py
course-management/src/users/static/users/css/: style.css
course-management/src/users/templates/users/: login.html
course-management/src/users/tests/: test_models.py  test_views.py
django-practice/: .pre-commit-config.yaml  README.md  pyproject.toml
django_example/: .gitignore  db.sqlite3  pyproject.toml
djangotutorial/: .gitignore  README.md  pyproject.toml
hello_django/: .gitignore  hello.py  (+3 more)
(+135 files in other folders)
